[package]
name = "test_runner"
version = "0.0.0"
# authors.workspace = true
# description.workspace = true
edition.workspace = true
# homepage.workspace = true
# keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
# categories.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
type_info = { workspace = true }

compact_str = { workspace = true }
memchr = { workspace = true }
oxc = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_index = { workspace = true }
oxc_resolver = { workspace = true }
rustc-hash = { workspace = true }
