[package]
name = "type_info"
version = "0.0.0"
# authors.workspace = true
# description.workspace = true
edition.workspace = true
# homepage.workspace = true
# keywords.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
# categories.workspace = true

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
oxc = { workspace = true }
oxc_index = { workspace = true }
oxc_resolver = { workspace = true }

[dev-dependencies]
